first section new, second section old auto home

--- a/homeautomation.html
+++ b/homeautomation.html
@@ -3,6 +3,159 @@
 
 <head>
     <meta charset="utf-8">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
+    <!-- End Google Tag Manager -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home Automation</title>
+    <meta name="description" content="Home Automation System. Upgrade your home to a smart home, including light, appliance &amp; whole home automation systems.">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Inter.css">
+</head>
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark bg-dark" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="/">
+                <img src="assets/img/3.png" alt="Leonard Electric Logo" style="width: 140px; height: 122px;">
+            </a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="panelupgrade.html">Panel Upgrades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="electricalrepairs.html">Electrical Repair</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="homeautomation.html">Home Automation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ev.html">EV Charging System</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hottubs.html">Hot Tubs &amp; Pools</a></li>
+                    <li class="nav-item"><a class="btn btn-primary shadow" role="button" href="contacts.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div class="hero text-center text-white d-flex flex-column justify-content-center align-items-center"
+        style="background: url('assets/img/AdobeStock_328780060.jpeg') center / cover no-repeat; height: 400px;">
+        <h1 class="fw-bold" style="font-size: 3.5rem; margin-bottom: 10px;">Home Automation Systems</h1>
+        <p class="lead" style="font-size: 1.5rem;">Convenience, Comfort, and Security for Modern Living</p>
+    </div>
+
+    <!-- Introduction Section -->
+    <div class="container py-5">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h2 class="fw-bold text-uppercase">Transform Your Home</h2>
+                <p class="text-muted">Experience a state-of-the-art smart sanctuary where convenience, comfort, and security come together. Control your lighting, appliances, and security systems effortlessly with our expert automation services.</p>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid rounded" src="assets/img/AdobeStock_555108297.jpeg" alt="Smart Home">
+            </div>
+        </div>
+    </div>
+
+    <!-- Features Section -->
+    <div class="container py-5">
+        <h2 class="fw-bold text-center mb-4">Our Home Automation Features</h2>
+        <div class="row text-center g-4">
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Smart Lighting</h3>
+                    <p class="text-muted">Control your lights from anywhere or set schedules for energy efficiency.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Temperature Control</h3>
+                    <p class="text-muted">Set the ideal home temperature with ease using smart thermostats.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="p-3 border rounded">
+                    <h3 class="fw-bold">Security Systems</h3>
+                    <p class="text-muted">Monitor your home and ensure safety with advanced smart security solutions.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Call to Action Section -->
+    <div class="text-center py-5 bg-light rounded" style="background-color: #ffffff; color: #000000;">
+        <h2 class="fw-bold">Start Your Smart Home Journey Today</h2>
+        <p> Get in touch with us to customize your smart home system.</p>
+        <a href="contacts.html" class="btn btn-primary btn-lg">Contact Us</a>
+    </div>
+
+    <footer class="bg-dark text-white py-3">
+        <div class="container text-center">
+            <p>Copyright © 2023 Leonard Electric. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
+
+<head>
+    <meta charset="utf-8">
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
