--- a/homeautomation.html
+++ b/homeautomation.html
@@ -49,8 +49,8 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero text-center text-white d-flex flex-column justify-content-center align-items-center"
-        style="background: url('assets/img/AdobeStock_328780060.jpeg') center / cover no-repeat; height: 400px;">
+    <div class="hero text-center d-flex flex-column justify-content-center align-items-center"
+        style="background: url('assets/img/AdobeStock_328780060.jpeg') center / cover no-repeat; height: 400px;color: #000000;">
         <h1 class="fw-bold" style="font-size: 3.5rem; margin-bottom: 10px;">Home Automation Systems</h1>
         <p class="lead" style="font-size: 1.5rem;">Convenience, Comfort, and Security for Modern Living</p>
     </div>
