--- a/homeautomation.html
+++ b/homeautomation.html
@@ -52,7 +52,7 @@
     <div class="hero text-center d-flex flex-column justify-content-center align-items-center"
         style="background: url('assets/img/AdobeStock_328780060.jpeg') center / cover no-repeat; height: 400px;color: #000000;">
         <h1 class="fw-bold" style="font-size: 3.5rem; margin-bottom: 10px;">Home Automation Systems</h1>
-        <p class="lead" style="font-size: 1.5rem;">Convenience, Comfort, and Security for Modern Living</p>
+        <p class="lead" style="font-size: 1.5rem; font-weight: bold;">Convenience, Comfort, and Security for Modern Living</p>
     </div>
 
     <!-- Introduction Section -->
