--- a/homeautomation.html
+++ b/homeautomation.html
@@ -155,7 +155,7 @@
             </ul>
         </div>
     </div>
-    <footer class="bg-dark" style="font-family: Inter, sans-serif;padding-left: 20px;">"></footer>
+    <footer class="bg-dark" style="font-family: Inter, sans-serif;padding-left: 20px;"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
