--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -71,6 +71,84 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </nav>
+<!-- Main Content -->
+    <div class="container py-5">
+        <h1 class="text-center mb-4">Electrical Repairs & Installation</h1>
+        <p class="text-center">Expert electrical services for your home and business. Whether it’s troubleshooting, installations, or upgrades, our licensed electricians ensure safety and efficiency in every project.</p>
+
+        <div class="row g-4 mt-5">
+            <!-- Service 1 -->
+            <div class="col-md-4 text-center">
+                <img src="assets/img/repairs.jpg" alt="Electrical Repairs" class="img-fluid rounded">
+                <h3 class="mt-3">Troubleshooting & Repairs</h3>
+                <p>Identify and fix electrical issues quickly to minimize disruptions.</p>
+            </div>
+            <!-- Service 2 -->
+            <div class="col-md-4 text-center">
+                <img src="assets/img/upgrades.jpg" alt="Upgrades" class="img-fluid rounded">
+                <h3 class="mt-3">Upgrades & Installations</h3>
+                <p>Upgrade panels, install new systems, and modernize your space with safety in mind.</p>
+            </div>
+            <!-- Service 3 -->
+            <div class="col-md-4 text-center">
+                <img src="assets/img/emergency.jpg" alt="Emergency Services" class="img-fluid rounded">
+                <h3 class="mt-3">Emergency Services</h3>
+                <p>Available 24/7 for urgent electrical repairs and services.</p>
+            </div>
+        </div>
+
+        <!-- Certifications Section -->
+        <div class="mt-5">
+            <h2>Certifications & Licenses</h2>
+            <p>We are proud to be a licensed and insured company. ECRA/ESA License #7004925 ensures that all our work meets strict safety and quality standards.</p>
+        </div>
+
+        <!-- FAQ Section -->
+        <div class="mt-5">
+            <h2>Frequently Asked Questions</h2>
+            <ul>
+                <li><strong>Do you offer free estimates?</strong> Yes, we provide free estimates for all our services.</li>
+                <li><strong>Are you available for emergencies?</strong> Absolutely! We are available 24/7 for emergency services.</li>
+                <li><strong>What areas do you serve?</strong> We proudly serve Kingston and the surrounding areas.</li>
+            </ul>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <header class="bg-dark"></header>
     <section class="py-5" style="background: var(--bs-body-bg);">
         <div class="container py-4 py-xl-5">
