--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -72,26 +72,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </nav>
 <!-- Main Content -->
-    <div class="container py-5">
-        <h1 class="text-center mb-4">Electrical Repairs & Installation</h1>
+    <div class="container py-5">                                          
+<h1 class="text-center mb-4" style="font-size: 56px;">Electrical Repairs & Installation</h1>        
         <p class="text-center">Expert electrical services for your home and business. Whether it’s troubleshooting, installations, or upgrades, our licensed electricians ensure safety and efficiency in every project.</p>
 
         <div class="row g-4 mt-5">
             <!-- Service 1 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/repairs.jpg" alt="Electrical Repairs" class="img-fluid rounded">
+                <img src="assets/img/20190930_121917.jpg" alt="Electrical Repairs" class="img-fluid rounded">
                 <h3 class="mt-3">Troubleshooting & Repairs</h3>
                 <p>Identify and fix electrical issues quickly to minimize disruptions.</p>
             </div>
             <!-- Service 2 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/upgrades.jpg" alt="Upgrades" class="img-fluid rounded">
+                <img src="assets/img/AdobeStock_594125503" alt="Upgrades" class="img-fluid rounded">
                 <h3 class="mt-3">Upgrades & Installations</h3>
                 <p>Upgrade panels, install new systems, and modernize your space with safety in mind.</p>
             </div>
             <!-- Service 3 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/emergency.jpg" alt="Emergency Services" class="img-fluid rounded">
+                <img src="assets/img/AdobeStock_422408840" alt="Emergency Services" class="img-fluid rounded">
                 <h3 class="mt-3">Emergency Services</h3>
                 <p>Available 24/7 for urgent electrical repairs and services.</p>
             </div>
@@ -115,94 +115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-    <header class="bg-dark"></header>
-    <section class="py-5" style="background: var(--bs-body-bg);">
-        <div class="container py-4 py-xl-5">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Electrical Repair &amp; Installation</h3>
-                    <p class="w-lg-50">Experience the convenience of expert electrical installations and reliable repairs that cater to your specific needs.&nbsp;</p>
-                </div>
-            </div>
-            <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col">
-                    <div class="p-4">
-                        <h4 style="text-align: center;">Expert Electrical Solutions</h4>
-                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="256" height="283" src="assets/img/AdobeStock_458167616_Preview.jpeg">
-                            <div></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="p-4">
-                        <h4 style="text-align: center;">Quick and Reliable Repairs</h4>
-                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="286" height="303" src="assets/img/leonardelectricVan.jpg">
-                            <div></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="p-4">
-                        <h4 style="text-align: center;">Customized Installations</h4>
-                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="284" height="299" src="assets/img/AdobeStock_457950908.jpeg">
-                            <div></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-7">
-                    <div class="row">
-                        <div class="col-md-12"><img class="img-thumbnail img-fluid center-block" src="assets/img/AdobeStock_594125503.jpeg"></div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <h1 style="font-size: 15px;"></h1>
-                    <p style="text-align: center;"><strong>Electrical Emergency Service:</strong></p>
-                    <p style="text-align: center;">Electrical emergencies can strike at any time, leaving you in need of <br>immediate assistance. Rest assured, our emergency service is just a<br> phone call away. Our skilled electricians are ready to respond swiftly <br>and efficiently to resolve any urgent electrical issues, providing you <br>with peace of mind in critical situations.</p><img class="img-thumbnail img-fluid center-block" src="assets/img/AdobeStock_422408840.jpeg">
-                    <p style="text-align: center;"><strong>Upgrading for Modern Living:</strong>&nbsp;</p>
-                    <p style="text-align: center;">Is your electrical system keeping up with your modern lifestyle? Our <br>team can upgrade your electrical infrastructure to accommodate the <br>latest technologies and gadgets. From smart home installations to <br>energy-efficient lighting, we can transform your space to align with the demands of contemporary living.</p><img class="img-thumbnail img-fluid center-block" src="assets/img/AdobeStock_392762194.jpeg">
-                    <p style="text-align: center;"><strong>Safety is Our Priority:</strong></p>
-                    <p style="text-align: center;">Electrical safety is of paramount importance to us. Our electricians <br>adhere to the highest safety standards to ensure the well-being of your property and loved ones. When you choose <br>us for electrical installations or repairs, you're choosing safety and <br>reliability above all else.</p><img class="img-thumbnail img-fluid center-block" src="assets/img/20190930_121917.jpg"><a href="contacts.html"><button class="btn btn-danger btn-lg center-block" type="button" style="text-align: center;padding-left: 32px;margin-left: 15px;">Call Today for an Estimate</button></a>
-                </div>
-            </div>
-        </div>
+           </div>
     </section>
     <footer class="bg-dark" style="font-family: Inter, sans-serif;">
         <div class="container py-4 py-lg-5">
