photo names added .jpeg

--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -85,13 +85,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <!-- Service 2 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/AdobeStock_594125503" alt="Upgrades" class="img-fluid rounded">
+                <img src="assets/img/AdobeStock_594125503.jpeg" alt="Upgrades" class="img-fluid rounded">
                 <h3 class="mt-3">Upgrades & Installations</h3>
                 <p>Upgrade panels, install new systems, and modernize your space with safety in mind.</p>
             </div>
             <!-- Service 3 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/AdobeStock_422408840" alt="Emergency Services" class="img-fluid rounded">
+                <img src="assets/img/AdobeStock_422408840.jpeg" alt="Emergency Services" class="img-fluid rounded">
                 <h3 class="mt-3">Emergency Services</h3>
                 <p>Available 24/7 for urgent electrical repairs and services.</p>
             </div>
