--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row g-4 mt-5">
             <!-- Service 1 -->
             <div class="col-md-4 text-center">
-                <img src="assets/img/20190930_121917.jpg" alt="Electrical Repairs" class="img-fluid rounded">
+                <img src="assets/img/AdobeStock_392762194.jpeg" alt="Electrical Repairs" class="img-fluid rounded">
                 <h3 class="mt-3">Troubleshooting & Repairs</h3>
                 <p>Identify and fix electrical issues quickly to minimize disruptions.</p>
             </div>
