--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -112,6 +112,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><strong>What areas do you serve?</strong> We proudly serve Kingston and the surrounding areas.</li>
             </ul>
         </div>
+        <div class="text-center mt-5">
+    <h2 style="font-size: 32px; margin-bottom: 20px;">Need Immediate Electrical Repairs?</h2>
+    <p>Contact our licensed electricians for fast and reliable service today!</p>
+    <a href="contacts.html" class="btn btn-primary btn-lg">Book an Estimate Now</a>
+    <p style="margin-top: 10px;">Or call us at <a href="tel:+16133283185">613-328-3185</a></p>
+</div>
     </div>
 
 
