--- a/electricalrepairs.html
+++ b/electricalrepairs.html
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="mt-5">
             <h2>Frequently Asked Questions</h2>
             <ul>
-                <li><strong>Do you offer free estimates?</strong> Yes, we provide free estimates for all our services.</li>
+                <li><strong>Do you offer free estimates?</strong> We are often able to give a price range, but it is dependent on the services required.</li>
                 <li><strong>Are you available for emergencies?</strong> Absolutely! We are available 24/7 for emergency services.</li>
                 <li><strong>What areas do you serve?</strong> We proudly serve Kingston and the surrounding areas.</li>
             </ul>
