added gpt code, left existing code

--- a/homeautomation.html
+++ b/homeautomation.html
@@ -48,6 +48,172 @@
         </div>
     </nav>
 
+
+
+
+<div class="container py-5">
+    <!-- Hero Section -->
+    <div class="row mb-5">
+        <div class="col-md-6 d-flex align-items-center">
+            <div>
+                <h1 class="mb-4" style="font-size: 56px;">Home Automation</h1>
+                <p>Enhance your home with technology that adapts to your lifestyle. With our home automation solutions, you'll experience unmatched convenience, security, and energy efficiency, all tailored to your needs.</p>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <img src="assets/img/AdobeStock_12345678.jpeg" alt="Home Automation" class="img-fluid rounded">
+        </div>
+    </div>
+
+    <!-- Features Section -->
+    <div class="row g-4 mt-5">
+        <!-- Existing Features -->
+        <div class="col-md-4 text-center">
+            <img src="assets/img/AdobeStock_23456789.jpeg" alt="Smart Lighting" class="img-fluid rounded">
+            <h3 class="mt-3">Lighting Automation</h3>
+            <p>Control your home’s lighting with your voice or smartphone. Schedule lights to turn on and off automatically to suit your routines.</p>
+        </div>
+        <div class="col-md-4 text-center">
+            <img src="assets/img/AdobeStock_34567890.jpeg" alt="Smart Thermostat" class="img-fluid rounded">
+            <h3 class="mt-3">Smart Thermostat</h3>
+            <p>Enjoy comfort while saving energy. Program your thermostat to adjust based on your daily schedule or control it remotely.</p>
+        </div>
+        <div class="col-md-4 text-center">
+            <img src="assets/img/AdobeStock_45678901.jpeg" alt="Smart Security" class="img-fluid rounded">
+            <h3 class="mt-3">Security Systems</h3>
+            <p>Monitor your home from anywhere. Our advanced security solutions include cameras, smart locks, and motion sensors for peace of mind.</p>
+        </div>
+    </div>
+
+    <!-- Additional Benefits Section -->
+    <div class="mt-5">
+        <h2 class="text-center">Why Choose Home Automation?</h2>
+        <p class="text-center">Home automation isn’t just about convenience. It’s about creating a home that works for you, making life easier and more secure. Here’s what you’ll love:</p>
+        <ul class="list-unstyled text-center">
+            <li>✔ Save energy and reduce utility bills with automated scheduling.</li>
+            <li>✔ Personalize routines, from waking up to winding down.</li>
+            <li>✔ Control your home with voice commands or a smartphone app.</li>
+            <li>✔ Enhance security with real-time alerts and remote monitoring.</li>
+        </ul>
+    </div>
+
+    <!-- Call to Action Before Footer -->
+    <div class="text-center mt-5">
+        <h2 style="font-size: 32px; margin-bottom: 20px;">Ready to Simplify Your Life?</h2>
+        <p>Contact us today to explore how home automation can transform your space.</p>
+        <a href="contacts.html" class="btn btn-primary btn-lg">Get Started Today</a>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <!-- Hero Section -->
     <div class="hero text-center d-flex flex-column justify-content-center align-items-center"
         style="background: url('assets/img/AdobeStock_328780060.jpeg') center / cover no-repeat; height: 400px;color: #000000;">
