added new service pg code gpt

--- a/services.html
+++ b/services.html
@@ -346,3 +346,162 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services - Leonard Electric</title>
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-WD7TFGW6');
+    </script>
+    <!-- End Google Tag Manager -->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+    <div><!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD7TFGW6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+    </div>
+
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Leonard Electric</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container py-5">
+        <h1 class="text-center mb-4">Our Services</h1>
+        <p class="text-center">We offer a wide range of electrical services to meet your needs. Explore our services below and find the perfect solution for your home or business.</p>
+
+        <!-- Service Boxes -->
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- Service 1 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/panel_upgrade.jpg" class="card-img-top" alt="Panel Upgrade">
+                    <div class="card-body">
+                        <h5 class="card-title">Panel Upgrades</h5>
+                        <p class="card-text">Upgrade your electrical panel to meet modern safety standards and handle increased power demands.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 2 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/surge_protection.jpg" class="card-img-top" alt="Surge Protection">
+                    <div class="card-body">
+                        <h5 class="card-title">Surge Protection</h5>
+                        <p class="card-text">Protect your home and devices from electrical surges with our advanced surge protection solutions.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 3 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/electrical_repair.jpg" class="card-img-top" alt="Electrical Repair">
+                    <div class="card-body">
+                        <h5 class="card-title">Electrical Repairs</h5>
+                        <p class="card-text">Our experts quickly diagnose and fix any electrical issues to ensure your safety and convenience.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 4 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/home_automation.jpg" class="card-img-top" alt="Home Automation">
+                    <div class="card-body">
+                        <h5 class="card-title">Home Automation</h5>
+                        <p class="card-text">Transform your home into a smart, energy-efficient space with our home automation solutions.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 5 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/hot_tub_installation.jpg" class="card-img-top" alt="Hot Tub Installation">
+                    <div class="card-body">
+                        <h5 class="card-title">Hot Tub & Pool Wiring</h5>
+                        <p class="card-text">Ensure safe and efficient wiring for your hot tub or pool with our professional services.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 6 -->
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="assets/img/ev_charging.jpg" class="card-img-top" alt="EV Charger Installation">
+                    <div class="card-body">
+                        <h5 class="card-title">EV Charger Installation</h5>
+                        <p class="card-text">Get a professionally installed EV charger for your electric vehicle to charge safely and efficiently at home.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p>&copy; 2023 Leonard Electric. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
