--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                     <div class="col mb-5">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="text-align: left;height: 117px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="electricalrepairs.html">
                                     <h5 class="fw-bold" style="text-align: left;">Electrical Repair &amp; Installation</h5>
                                 </a>
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col mb-5">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="text-align: left;height: 117px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="homeautomation.html">
                                     <h5 class="fw-bold" style="text-align: left;">Home Automation Systems</h5>
                                 </a>
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col mb-5">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="inspection_panellabel.html">
                                     <h5 class="fw-bold" style="text-align: left;">Home Wiring Inspection</h5>
                                 </a>
@@ -161,7 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col mb-4">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="height: 117px;margin-bottom: -25px;padding-bottom: 8px;margin-top: 0px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="services.html">
                                     <h5 class="fw-bold" style="text-align: left;">Interior &amp; Exterior Lighting</h5>
                                 </a>
@@ -170,18 +170,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col mb-4">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="inspection_panellabel.html">
-                                    <h5 class="fw-bold" style="text-align: left;margin-top: -22px;"><strong>Panel Labelling</strong></h5>
+                                    <h5 class="fw-bold" style="text-align: left;"><strong>Panel Labelling</strong></h5>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
+                            <div class="card-body px-4 py-5 px-md-5">
                                 <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="ev.html">
-                                    <h5 class="fw-bold" style="text-align: left;margin-top: -33px;padding-top: 26px;">EV Charging Systems</h5>
+                                    <h5 class="fw-bold" style="text-align: left;">EV Charging Systems</h5>
                                 </a>
                             </div>
                         </div>
@@ -191,18 +191,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col mb-5">
                     <div class="card shadow-sm">
-                        <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
+                        <div class="card-body px-4 py-5 px-md-5">
                             <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="panelupgrade.html">
-                                <h5 class="fw-bold" style="text-align: left;margin-top: -33px;padding-top: 26px;">Panel &amp; Service Upgrades</h5>
+                                <h5 class="fw-bold" style="text-align: left;">Panel &amp; Service Upgrades</h5>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="card shadow-sm">
-                        <div class="card-body px-4 py-5 px-md-5" style="height: 117px;">
+                        <div class="card-body px-4 py-5 px-md-5">
                             <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"></div><a href="hottubs.html">
-                                <h5 class="fw-bold" style="text-align: left;margin-top: -40px;padding-top: 28px;">Hot Tub, Pool &amp; Sauna Installs</h5>
+                                <h5 class="fw-bold" style="text-align: left;">Hot Tub, Pool &amp; Sauna Installs</h5>
                             </a>
                         </div>
                     </div>
@@ -217,7 +217,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col mb-5" style="text-align: center;">
                     <div class="card shadow-sm" style="text-align: center;">
-                        <div class="card-body px-4 py-5 px-md-5" style="text-align: center;height: 117px;">
+                        <div class="card-body px-4 py-5 px-md-5" style="text-align: center;">
                             <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;text-align: center;"></div><a href="generlink.html">
                                 <h5 class="fw-bold" style="text-align: left;">Stand-By Generators</h5>
                             </a>
@@ -226,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col mb-5">
                     <div class="card shadow-sm">
-                        <div class="card-body px-4 py-5 px-md-5" style="text-align: center;height: 117px;"><a href="surgeprotector.html">
+                        <div class="card-body px-4 py-5 px-md-5" style="text-align: center;"><a href="surgeprotector.html">
                                 <h5 class="fw-bold" style="text-align: left;">Surge Protection Services</h5>
                             </a></div>
                     </div>
