Fixes to front pages and services.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-md-6 col-xl-4 offset-md-2">
                                 <div style="max-width: 350px;"><a href="services.html">
-                                        <h1 class="text-uppercase fw-bold" style="color: rgb(21,19,19);text-shadow: 0px 0px rgb(171,163,163), 0px 0px 20px;margin-top: -285px;font-family: Inter, sans-serif;">smarter life, smarter savings</h1>
+                                        <h1 class="text-uppercase fw-bold" style="color: #ffffff;text-shadow: 0px 0px rgb(171,163,163), 0px 0px 20px;margin-top: -285px;font-family: Inter, sans-serif;">smarter life, smarter savings</h1>
                                     </a></div>
                             </div>
                         </div>
