--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,105 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="assets/css/Pricing-Duo-icons.css">
     <link rel="stylesheet" href="assets/css/Video-Parallax-Background-v3.css">
     <link rel="stylesheet" href="assets/css/Video-Responsive.css">
+    <style>
+    .gallery-item {
+      margin-bottom: 30px; /* Add spacing between rows */
+      display: flex;
+      flex-direction: column;
+      height: 100%; /* Make gallery item take full height of column */
+    }
+
+    .gallery-item .img-container {
+      height: 300px; /* Set a fixed height for the image container */
+      overflow: hidden; /* Hide parts of the image that overflow */
+      margin-bottom: 15px; /* Add space below the image */
+      background-color: #eee; /* Added background color for placeholder effect */
+    }
+
+    .gallery-item .img-fluid {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Make image cover the container, cropping if needed */
+      object-position: center; /* Center the image within the container */
+    }
+
+    .gallery-item .caption {
+        margin-top: auto; /* Push caption to the bottom */
+        padding-top: 10px; /* Add some space above caption */
+    }
+
+    .gallery-item h3 {
+      font-size: 1.25rem; /* Consistent heading size */
+      margin-bottom: 0.25rem;
+    }
+
+    .gallery-item p {
+      font-size: 1rem; /* Consistent paragraph size */
+      color: #6c757d; /* Softer color for location text */
+      margin-bottom: 0;
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none; /* Hidden by default, JS will change to flex */
+      position: fixed; /* Stay in place */
+      z-index: 1000; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+      /* Flexbox for centering */
+      align-items: center; /* Vertical center */
+      justify-content: center; /* Horizontal center */
+      /* display is controlled by JS */
+    }
+
+    .modal-content {
+        /* Ensure image scales down correctly and fits */
+        display: block; /* Keep as block for sizing behavior */
+        max-width: 90%;    /* Limit width relative to parent (.modal) */
+        max-height: 90vh;   /* Limit height relative to viewport */
+        width: auto;       /* Allow natural width up to max-width */
+        height: auto;      /* Allow natural height up to max-height */
+        object-fit: contain; /* Scale image down to fit bounds, maintain aspect ratio */
+        margin: auto;      /* Re-add margin:auto for robustness with block display */
+    }
+
+     /* Add Animation */
+    .modal-content {
+      animation-name: zoom;
+      animation-duration: 0.6s;
+    }
+
+    @keyframes zoom {
+      from {transform:scale(0)}
+      to {transform:scale(1)}
+    }
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #f1f1f1;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #bbb;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    /* Style for image containers to indicate they are clickable */
+    .gallery-item .img-container {
+        cursor: pointer;
+    }
+    </style>
 </head>
 
 <body><div><!-- Google Tag Manager (noscript) -->
@@ -85,119 +184,145 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20190930_121917.jpg" style="width: 438px;height: 516.766px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Panel Upgrade</h3>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20190930_121917.jpg"></div>
+                        <div class="caption">
+                            <h3>Panel Upgrade</h3>
                             <p>Kingston, ON</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/17840.jpg" style="height: 516px;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Interior Lighting</h3>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/17840.jpg"></div>
+                        <div class="caption">
+                            <h3>Interior Lighting</h3>
                             <p>Kingston, ON</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/generatoredit2.jpg" style="height: 520.188px;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Generator</h3>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/generatoredit2.jpg"></div>
+                        <div class="caption">
+                            <h3>Generator</h3>
                             <p>Kingston,ON</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20200123_133448.jpg" style="width: 438px;height: 516.766px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Renovations</h3>
-                            <p style="font-size: 16px;">Kingston, ON</p>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200123_133448.jpg"></div>
+                        <div class="caption">
+                            <h3>Renovations</h3>
+                            <p>Kingston, ON</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3" style="font-size: 23px;">
-                        <div style="font-size: 23px;"><img class="img-fluid" src="assets/img/20200123_133445.jpg" style="height: 516px;width: 438px;font-size: 23px;"></div>
-                        <div style="font-size: 23px;">
-                            <h3 style="font-size: 23px;">Interior Systems</h3>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200123_133445.jpg"></div>
+                        <div class="caption">
+                            <h3>Interior Systems</h3>
+                            <p>&nbsp;</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div style="font-size: 23px;"><img class="img-fluid" src="assets/img/20200123_133422.jpg" style="height: 516px;width: 438px;font-size: 23px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Lighting</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20200313_143959.jpg" style="height: 516px;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Electrical Systems</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/rephoto2.jpg" style="height: 516px;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">Panel Upgrade</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20200415_114354.jpg" style="height: 516ppx;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23PX;">Interior Wiring</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3" style="font-size: 23PX;">
-                        <div style="font-size: 23PX;"><img class="img-fluid" src="assets/img/20200415_114502.jpg" style="height: 516px;width: 438px;font-size: 23PX;"></div>
-                        <div style="font-size: 23PX;">
-                            <h3 style="font-size: 23PX;">Lighting</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div style="font-size: 23PX;"><img class="img-fluid" src="assets/img/20200313_143955-1.jpg" style="height: 516px;width: 438px;font-size: 23PX;"></div>
-                        <div>
-                            <h3 style="font-size: 23PX;">New Builds</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20200313_144043-1.jpg" style="height: 516ppx;width: 438px;"></div>
-                        <div>
-                            <h3 style="font-size: 23px;">New Builds</h3>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div><img class="img-fluid" src="assets/img/20200415_114359.jpg" style="height: 516px;width: 438px;"></div>
-                        <div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/20200123_133422.jpg"></div>
+                        <div class="caption">
                             <h3>Lighting</h3>
+                            <p>&nbsp;</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3">
-                        <div></div>
-                        <div>
-                            <h3 style="font-size: 23px;">My Work</h3>
-                        </div><img class="img-fluid" src="assets/img/20200320_085803.jpg" style="margin-right: 33px;width: 290px;height: 533px;">
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200313_143959.jpg"></div>
+                        <div class="caption">
+                            <h3>Electrical Systems</h3>
+                            <p>&nbsp;</p>
+                        </div>
                     </div>
-                    <div class="col"><img class="img-fluid" src="assets/img/20200325_103553.jpg" style="margin-top: 42px;width: 350px;height: 516px;"></div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/rephoto2.jpg"></div>
+                        <div class="caption">
+                            <h3>Panel Upgrade</h3>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200415_114354.jpg"></div>
+                        <div class="caption">
+                            <h3>Interior Wiring</h3>
+                             <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200415_114502.jpg"></div>
+                        <div class="caption">
+                            <h3>Lighting</h3>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200313_143955-1.jpg"></div>
+                        <div class="caption">
+                            <h3>New Builds</h3>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200313_144043-1.jpg"></div>
+                        <div class="caption">
+                            <h3>New Builds</h3>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                        <div class="img-container"><img class="img-fluid" src="assets/img/20200415_114359.jpg"></div>
+                        <div class="caption">
+                            <h3>Lighting</h3>
+                             <p>&nbsp;</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/20200320_085803.jpg"></div>
+                        <div class="caption">
+                            <h3>My Work</h3>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                     <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/20200325_103553.jpg"></div>
+                        <div class="caption">
+                             <h3>Misc</h3>
+                             <p>&nbsp;</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="text-start"><img class="img-fluid" src="assets/img/20200320_085832.jpg" style="height: 648px;width: 322px;padding-left: 30px;margin-left: -3px;padding-top: 118px;margin-top: -65px;padding-right: 0px;"><img class="img-fluid" src="assets/img/20200508_083842.jpg" style="height: 648px;width: 322px;padding-left: 30px;margin-left: -3px;padding-top: 118px;margin-top: -65px;padding-right: 0px;min-width: 257px;"><img class="img-fluid" src="assets/img/17849.jpg" style="height: 648px;width: 322px;padding-left: 30px;margin-left: -3px;padding-top: 118px;margin-top: -65px;padding-right: 0px;min-width: 257px;">
-                            <div class="col-12 col-md-6 col-xl-3">
-                                <div></div>
-                                <div></div>
-                            </div>
-                            <div class="col-12 col-md-6 col-xl-3">
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div>
-                            <h3 style="font-size: 23px;">Some Other Work</h3>
-                            <div class="col-12 col-md-6 col-xl-3">
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                 <hr style="margin-top: 30px; margin-bottom: 30px;">
+                 <h2 style="font-weight: bold; margin-bottom: 1rem;">Some Other Work</h2>
+                 <div class="row">
+                     <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/20200320_085832.jpg"></div>
+                         <div class="caption">
+                            <h3>Exterior Work</h3>
+                            <p>&nbsp;</p>
+                         </div>
+                     </div>
+                      <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/20200508_083842.jpg"></div>
+                         <div class="caption">
+                            <h3>Living Room</h3>
+                             <p>&nbsp;</p>
+                         </div>
+                     </div>
+                      <div class="col-12 col-md-6 col-xl-3 gallery-item">
+                         <div class="img-container"><img class="img-fluid" src="assets/img/17849.jpg"></div>
+                         <div class="caption">
+                            <h3>Basement Panel</h3>
+                             <p>&nbsp;</p>
+                         </div>
+                     </div>
+                 </div>
             </div>
         </div>
+    </div>
+    <!-- Modal Structure -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <div id="caption"></div>
     </div>
     <footer class="bg-dark" style="font-family: Inter, sans-serif;">
         <div class="container py-4 py-lg-5">
@@ -257,6 +382,45 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
     <script src="assets/js/Video-Parallax-Background-v3-Parallax-Video-Background.js"></script>
+
+    <script>
+        // Get the modal
+        var modal = document.getElementById("imageModal");
+
+        // Get the image and insert it inside the modal - use its "alt" text as a caption
+        var modalImg = document.getElementById("modalImage");
+        var captionText = document.getElementById("caption");
+
+        // Get all gallery image containers
+        var imgContainers = document.querySelectorAll('.gallery-item .img-container');
+
+        // Loop through all image containers and add click event listener
+        imgContainers.forEach(function(container) {
+            container.onclick = function(){
+                var img = container.querySelector('img'); // Get the image inside the container
+                modal.style.display = "flex"; // Use flex to enable centering
+                modalImg.src = img.src;
+                // You could potentially add caption logic here if images had titles/alts
+                // captionText.innerHTML = this.alt;
+            }
+        });
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal content (the image), close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
