--- a/new-request.html
+++ b/new-request.html
@@ -152,6 +152,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/Animated-Pretty-Product-List-v12-Animated-Pretty-Product-List.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
     <script src="assets/js/Video-Parallax-Background-v3-Parallax-Video-Background.js"></script>
+    <!-- INVISIBLE LINK FOR BUILD SYSTEM - DO NOT REMOVE -->
+    <!-- This ensures new-request.html gets included in the Vercel build -->
+    <a href="new-request.html" style="display: none; visibility: hidden;" aria-hidden="true"></a>
+    <!-- END INVISIBLE LINK -->
 </body>
 
 </html> 
